--- a/css/page-404.css
+++ b/css/page-404.css
@@ -1,44 +1,160 @@
-*{
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-}
-.game{
-  width: 500px;
-  height: 200px;
-  border: 1px solid black;
-  margin: auto;
-}
-#character{
-  width: 20px;
-  height: 50px;
-  background-color: red;
-  position:relative;
-  top: 150px;
-}
-.animate{
-  animation: jump 0.8s linear;
-}
-@keyframes jump{
-  0%{top: 150px;}
-  30%{top: 100px;}
-  70%{top: 100px;}
-  100%{top: 150px;}
+/********* Main *********/
+
+.main-404 {
+  width: 100%;
+  max-width: 100%;
+  height: 100vh;
+  max-height: 100vh;
+  background-color: #010813;
+  overflow: hidden;
 }
 
-#block{
+.main-404__game {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: 50%;
+  max-height: 50%;
+  border-bottom: 2px solid #fff7ee;
+}
+
+.main-404__game-wrap-character {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.game-strated .main-404__game-wrap-character {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
+}
+
+.main-404__title {
+  font-family: 'Inter';
+  font-size: 220px;
+  line-height: 260px;
+  font-weight: 400;
+}
+.game-strated .main-404__title {
+  display: none;
+}
+
+@keyframes jump{
+  0%{bottom: 0;}
+  40%{bottom: 50px;}
+  60%{bottom: 50px;}
+  100%{bottom: 0;}
+}
+
+.main-404__game-character {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%,50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fff7ee;
+  transition: all 400ms ease-in-out;
+}
+.game-strated .main-404__game-character {
+  bottom: 0;
+  transform: translate(-50%,0);
+}
+.main-404__game-character.animate {
+  transition: none;
+  animation: jump 0.8s linear;
+}
+
+.main-404__subtitle {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+  text-align: center;
+}
+.game-strated .main-404__subtitle {
+  display: none;
+}
+
+.main-404__wrap-game-score {
+  display: none;
+  box-sizing: border-box;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  max-width: 100%;
+  padding: 16px;
+  text-align: center;
+}
+.game-strated .main-404__wrap-game-score {
+  display: block;
+}
+
+
+/********* Obstacles *********/
+
+@keyframes obstacle {
+  0%{left: 2000px}
+  100%{left: -100px}
+}
+
+.game-obstacle {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: obstacle 8s infinite linear;
+}
+.game-strated .game-obstacle {
+  display: block;
+}
+
+.game-block-1 {
   background-color: blue;
   width: 20px;
   height: 20px;
-  position: relative;
-  top: 130px;
-  left: 500px;
-  animation: block 3s infinite linear;
 }
-@keyframes block{
-  0%{left: 500px}
-  100%{left: -20px}
-}
-p{
+
+
+/********* Actions *********/
+
+.main-404__actions {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+  padding: 0 20px 40px 20px;
+  font-family: 'Inter';
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
   text-align: center;
 }
+
+.main-404__actions-or {
+  margin: 16px 0;
+}
+
+.main-404__btn-start-game {
+  cursor: pointer;
+  padding: 8px 16px;
+  border: 1px solid #fff7ee;
+  background-color: transparent;
+}
+
+.main-404__btn-back-to-home {
+
+}
+
