--- a/css/page-404.css
+++ b/css/page-404.css
@@ -129,9 +129,12 @@
   object-position: -16px 0px;
 }
 
-.main-404__game-character.animate2 {
-  transition: none;
-  animation: jump2 0.8s linear;
+.main-404__game-explosion {
+  height: 88px;
+  width: 52px;
+  overflow: hidden;
+  object-fit: cover;
+  object-position: -16px 0px;
 }
 
 .main-404__subtitle {
@@ -164,6 +167,27 @@
   display: block;
 }
 
+.main-404__game-death {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  text-align: center;
+}
+
+.main-404__title-death {
+  font-size: 100px;
+}
+
+#scoreGameOver {
+  margin-top: 100px;
+  font-size: 80px;
+}
+
+.hide {
+  display: none;
+}
 
 /********* Obstacles *********/
 
