--- a/css/page-404.css
+++ b/css/page-404.css
@@ -130,11 +130,14 @@
 }
 
 .main-404__game-explosion {
-  height: 88px;
-  width: 52px;
+  height: 225px;
+  width: 155px;
   overflow: hidden;
   object-fit: cover;
-  object-position: -16px 0px;
+  object-position: -4px -3px;
+  position: relative;
+  left: -50px;
+  top: -100px;
 }
 
 .main-404__subtitle {
