--- a/css/page-404.css
+++ b/css/page-404.css
@@ -188,17 +188,33 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 90%;
   text-align: center;
 }
 
 .main-404__title-death {
-  font-size: 100px;
+  font-size: 40px;
+  line-height: 48px;
+}
+
+.game-over__wrap-score {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 28px;
+  line-height: 40px;
+}
+
+.game-over__piece {
+  width: 32px;
+  height: 32px;
 }
 
 #scoreGameOver {
-  margin-top: 100px;
-  font-size: 80px;
+  margin-top: 32px;
+  font-size: 32px;
+  line-height: 40px;
 }
 
 .hide {
@@ -228,6 +244,9 @@
 }
 .game-started .game-obstacle {
   display: block;
+}
+.game-obstacle.stop-anim {
+  animation: none !important;
 }
 
 .game-block-1 {
@@ -634,12 +653,16 @@
 .main-404__btn-start-game {
   border: none;
   outline: none;
-  color: #010813;
+  font-weight: 700;
+  color: #bbbcc3;
   background: #fff7ee;
   cursor: pointer;
   position: relative;
   z-index: 0;
   border-radius: 10px;
+}
+.main-404__btn-start-game:hover {
+  color: #010813;
 }
 .main-404__btn-start-game:before {
   content: '';
@@ -657,13 +680,8 @@
   transition: opacity .3s ease-in-out;
   border-radius: 10px;
 }
-.main-404__btn-start-game:active{
-  color: #000
-}
-.main-404__btn-start-game:active:after {
-  background: transparent;
-}
-.main-404__btn-start-game:hover:before {
+.main-404__btn-start-game:hover:before,
+.main-404__btn-start-game.restart:before {
   opacity: 1;
 }
 .main-404__btn-start-game:after {
