--- a/css/page-404.css
+++ b/css/page-404.css
@@ -182,6 +182,7 @@
 .game-started .main-404__wrap-game-score {
   display: flex;
 }
+/* Game Over */
 
 .main-404__game-death {
   position: absolute;
@@ -220,6 +221,43 @@
 .hide {
   display: none;
 }
+
+/* Success */
+
+.main-404__game-success {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+}
+
+.main-404__title-success {
+  font-size: 40px;
+  line-height: 48px;
+}
+
+.game-success__wrap-score {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 28px;
+  line-height: 40px;
+}
+
+.game-success__piece {
+  width: 32px;
+  height: 32px;
+}
+
+#scoreGameSuccess {
+  margin-top: 32px;
+  font-size: 32px;
+  line-height: 40px;
+}
+
 
 /********* Obstacles *********/
 
